if else branches

--- a/implementacao/makefile
+++ b/implementacao/makefile
@@ -1,10 +1,10 @@
 all: final
 
-final: calculadora.o soma.o
-	ld -m elf_i386 -o calculadora calculadora.o soma.o
+final: calculadora.o soma.o subtracao.o
+	ld -m elf_i386 -o calculadora calculadora.o soma.o subtracao.o
 
 %.o : %.asm
 	nasm -f elf $< -o $@
 
 clean:
-	rm calculadora calculadora.o soma.o
+	rm calculadora calculadora.o soma.o subtracao.o
