--- a/implementacao/makefile
+++ b/implementacao/makefile
@@ -1,10 +1,12 @@
+ARQUIVOS = calculadora.o soma.o subtracao.o
+
 all: final
 
-final: calculadora.o soma.o subtracao.o
-	ld -m elf_i386 -o calculadora calculadora.o soma.o subtracao.o
+final: $(ARQUIVOS)
+	ld -m elf_i386 -o calculadora $(ARQUIVOS)
 
 %.o : %.asm
 	nasm -f elf $< -o $@
 
 clean:
-	rm calculadora calculadora.o soma.o subtracao.o
+	rm calculadora $(ARQUIVOS)
